# middlewares/auth.js
@@ -1,0 +1,20 @@
+import jwt from "jsonwebtoken";
+
+const authenticateToken = (req, res, next) => {
+  try {
+    const token = req.headers["authorization"];
+    console.log("Login with token", token);
+    if (token == null) return res.sendStatus(401);
+    jwt.verify(token, process.env.TOKEN_SECRET, (err, user) => {
+      console.log(err);
+      if (err) return res.sendStatus(403);
+      req.user = user;
+      next();
+    });
+  } catch (error) {
+    console.error(error);
+    return res.status(500).json({ error: "Internal server error" });
+  }
+};
+
+export default authenticateToken;
